--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~42.0.1",
+    "expo-camera": "~11.2.2",
+    "expo-file-system": "~11.1.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
