--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~42.0.1",
     "expo-camera": "~11.2.2",
     "expo-file-system": "~11.1.3",
+    "expo-image-manipulator": "~9.2.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
