--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-camera": "~11.2.2",
     "expo-file-system": "~11.1.3",
