--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-camera": "~11.2.2",
+    "expo-image-manipulator": "~9.2.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
